# 236-Project_3

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  Datalog.cpp  Header.cpp  Header.h  Interpreter.cpp  Interpreter.h  Parameter.h  Predicate.h  Relation.cpp  Relation.h  Tuple.cpp  Tuple.h  main.cpp
